feat(v11): Phase 6 旧链清理 —— 切流演练, 以及为什么切流之前不删老链
本阶段的结论是**不删 MessagePipeline**, 理由写死在文档里: §25.1 的顺序是
Adapter → Shadow → Dual Run → Cutover → Cleanup, 而 Cutover 还没发生 ——
四个开关全是 enabled=false / shadow=true。此刻老链是唯一真的在回话的那条路:
advanceMind 读它的 attention/brainDecision 去构造回复输入, V11TurnSealJob 走的是
AgentRuntime.process() 这个委托适配器, BehaviorTickJob 在 shadow 期让她开口。
这时候删除不是清理, 是停机。

所以交付四件能做的事:

1. 切流演练 V11CutoverTest(5 条用例, 真库 + 真 Spring 上下文)
   四个开关全部切开、后台 cron 钉死、BehaviorEngine 换成假的, 走完
   闹钟 → 投信 → 消费者拆信 → 记账的闭环, 并断言切流后老 tick 停摆。
   它换的是**配置**而不是对象 —— 前五个阶段的用例全在开关关着的默认态下跑,
   于是"切流那天是这些接线第一次被执行"这条风险一直没被覆盖: 属性名写错一个字母
   (@Value 的默认值会安静接手)、某个消费者没进容器, 单测一个都看不见。

2. 演练当场逮到的一个真缺陷: DigitalHumanTestApplication 手写 @ComponentScan
   压掉了元注解上的 TypeExcludeFilter, 于是任何测试类里嵌套的 @TestConfiguration
   都会被扫成 bean, 进入**所有** 31 个 @SpringBootTest 的上下文。泄漏本身不报错,
   它只是让别人的协作者出现在你的容器里 —— 这次冒出来的是 RecordConsumer
   (supports 一切), 而它只该活在 AgentMailboxTest 里。修法已写明, 安全性有证据:
   全仓只有一个 @TestConfiguration, 且它自己的测试用 @Import 显式引入,
   而 @Import 不经过组件扫描。

3. 删掉四个零调用者的适配器(CognitiveDecision.from / fromBrain / from(PersonDecision[, now]))。
   删的理由不是"暂时用不上", 而是它们注释里声称的用途是**错的** —— 真正的 shadow
   对照在 CognitionDecisionRecorder.classify, 比的是"会不会写出一条消息出去",
   刻意不比决策名字。留着它们, 后来的人会去找一个不存在的调用点。
   同样零调用者、但被另一个仓的契约 javadoc 写成自己一部分的 AttentionPolicies
   **保留**, 理由与解锁条件记在文档里。

4. 删除清单(每一项带解锁条件) + 切流 runbook(含回滚: 不许用"只把 shadow 改回 true"
   当回滚 —— 那会同时留下新链投信与老链 tick, 症状是她一次说两条)。
   清单里三个老定时器的对应关系**未核实**, 已如实标出。

另: V11RuntimeSwitch 补了 isEffective() —— 四个开关横着读的地方不该有
"这一个是 isEnabled, 那三个是 isEffective" 这种记忆负担。

测试: 774 条全绿(digital-human 729 / server 37 / openapi 8, 0 failures);
scripts/check-agent.sh 七项守卫通过。计数对得上: 777 - 8(删掉的适配器用例) + 5(演练)。

Co-Authored-By: Claude Code <noreply@anthropic.com>